# youtube-transcripts

./: .env.example  .gitignore  CLAUDE.md  README.md  download_transcript.py  main.py  mcp-server-gemini-edit.md  pyproject.toml  test_models.py  transform_transcript.py  transform_transcript.sh
styles/: coding_agent.md  diy_project.md  knowledge_base.md
